# WallpaperManager

./: Cargo.toml  README.md
src/: constants.rs  logger.rs  main.rs  wallpaper_browser.rs
tests/: code.py
