[package]
name = "wm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.5.3", package = "libadwaita", features = ["v1_4"] }
async-channel = "2.1.0"
dirs = "5.0.1"
env_logger = "0.10.1"
gtk4 = "0.7.3"
log = "0.4.20"
#libadwaita = "0.5.3"
